--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./img/carousel-img1.png" class="d-block w-100" alt="...">
+                            <img src="./img/carousel-img1.png" class="d-block w-100" alt="publicidad">
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/carousel-img2.png" class="d-block w-100" alt="...">
+                            <img src="./img/carousel-img2.png" class="d-block w-100" alt="publicidad">
                         </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -95,7 +95,7 @@
                     <div class="card-group">
                         <div class="card ">
                             <a href="./pages/articulo.html">
-                                <img src="./img/cardImg1.png" class="card-img-top" alt="...">
+                                <img src="img/cardImg1.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
                                     <h5 class="card-title">$126.999</h5>
                                     <p class="card-text">Smart TV</p>
@@ -104,7 +104,7 @@
                         </div>
                         <div class="card ">
                             <a href="./pages/articulo.html">
-                                <img src="./img/cardImg2.png" class="card-img-top" alt="...">
+                                <img src="img/cardImg2.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
                                     <h5 class="card-title">$126.999</h5>
                                     <p class="card-text">Smart TV</p>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="card ">
                             <a href="./pages/articulo.html">
-                                <img src="./img/cardImg3.png" class="card-img-top" alt="...">
+                                <img src="img/cardImg3.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
                                     <h5 class="card-title">$126.999</h5>
                                     <p class="card-text">Smart TV</p>
@@ -122,7 +122,7 @@
                         </div>
                         <div class="card ">
                             <a href="./pages/articulo.html">
-                                <img src="./img/cardImg4.png" class="card-img-top" alt="...">
+                                <img src="img/cardimg4.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
                                     <h5 class="card-title">$126.999</h5>
                                     <p class="card-text">Smart TV</p>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="card ">
                             <a href="./pages/articulo.html">
-                                <img src="./img/cardImg5.png" class="card-img-top" alt="...">
+                                <img src="img/cardImg5.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
                                     <h5 class="card-title">$126.999</h5>
                                     <p class="card-text">Smart TV</p>
