--- a/pages/articulo.html
+++ b/pages/articulo.html
@@ -93,7 +93,7 @@
                             <div class="card-group">
                                 <div class="card ">
                                     <a href="#">
-                                        <img src="../img/cardImg3.png" class="card-img-top" alt="...">
+                                        <img src="../img/cardImg3.png" class="card-img-top" alt="Televisor">
                                         <div class="card-body">
                                             <h5 class="card-title">$126.999</h5>
                                             <p class="card-text">Smart TV</p>
@@ -102,7 +102,7 @@
                                 </div>
                                 <div class="card ">
                                     <a href="#">
-                                        <img src="../img/cardImg4.png" class="card-img-top" alt="...">
+                                        <img src="../img/cardImg4.png" class="card-img-top" alt="Televisor">
                                         <div class="card-body">
                                             <h5 class="card-title">$126.999</h5>
                                             <p class="card-text">Smart TV</p>
@@ -111,7 +111,7 @@
                                 </div>
                                 <div class="card ">
                                     <a href="#">
-                                        <img src="../img/cardImg5.png" class="card-img-top" alt="...">
+                                        <img src="../img/cardimg5.png" class="card-img-top" alt="Televisor">
                                         <div class="card-body">
                                             <h5 class="card-title">$126.999</h5>
                                             <p class="card-text">Smart TV</p>
