--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <a class="seccionOfertas__enlace" href="">ver todas</a>
                     </div>
                     <div class="card-group">
-                        <div class="card ">
+                        <div class="card">
                             <a href="./pages/articulo.html">
                                 <img src="img/cardImg1.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
@@ -102,25 +102,25 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="card ">
+                        <div class="card">
                             <a href="./pages/articulo.html">
-                                <img src="img/cardImg2.png" class="card-img-top" alt="Televisor">
+                                <img src="img/cardimg2.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
                                     <h5 class="card-title">$126.999</h5>
                                     <p class="card-text">Smart TV</p>
                                 </div>
                             </a>
                         </div>
-                        <div class="card ">
+                        <div class="card">
                             <a href="./pages/articulo.html">
-                                <img src="img/cardImg3.png" class="card-img-top" alt="Televisor">
+                                <img src="img/cardimg3.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
                                     <h5 class="card-title">$126.999</h5>
                                     <p class="card-text">Smart TV</p>
                                 </div>
                             </a>
                         </div>
-                        <div class="card ">
+                        <div class="card">
                             <a href="./pages/articulo.html">
                                 <img src="img/cardimg4.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
@@ -129,9 +129,9 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="card ">
+                        <div class="card">
                             <a href="./pages/articulo.html">
-                                <img src="img/cardImg5.png" class="card-img-top" alt="Televisor">
+                                <img src="img/cardimg5.png" class="card-img-top" alt="Televisor">
                                 <div class="card-body">
                                     <h5 class="card-title">$126.999</h5>
                                     <p class="card-text">Smart TV</p>
